<resources>
  <string name="app_name">helper</string>
  <string name="loading_tip">Loading</string>
  <string name="cancel">取消</string>
  <string name="confirm">确定</string>
  <string name="tip">提示</string>
  <string name="search">Search</string>
  <string name="login">Login</string>
  <string name="account">Account</string>
  <string name="password">Password</string>
  <string name="start_register">start register</string>
  <string name="number_not_empty">学号不能为空</string>
  <string name="password_not_empty">密码不能为空</string>
  <string name="password_error">账号密码错误</string>
  <string name="default_bio">暂无签名</string>
  <string name="video_tip">"胖胖,我给你看一个视频，等它下载好了，你点开看一下"</string>
  <string name="music_tip">"胖胖,我给你听一首歌，等它下载好了，你点开看一下"</string>
  <string name="update_tip">版本更新</string>
  <string name="comment_hint_tip">说点什么吧…</string>
  <string name="send">发送</string>
  <string name="publish_statement">Publish Statement</string>
  <string name="add_image_tip">添加图片（最多四张）</string>
  <string name="camera_premission_tip">请先给予相机和本地内存权限</string>
  <string name="max_count_image_tip">最多选择四张图片</string>
  <string name="delete">删除</string>
  <string name="show_oral_image">查看原图</string>
  <string name="week_tip">第%1$d周</string>
  <string name="course_table">课程表</string>
  <string name="school_statement">校园说说</string>
  <string name="second_market">二手市场</string>
  <string name="lost_find">失物招领</string>
  <string name="apk_name">helper.apk</string>
  <string name="input_name">输入姓名</string>

  <string name="default_info_bg">https://raw.githubusercontent.com/old-traveler/Helper/master/img/default_image.png</string>
  <string name="user_info_desc_default">这家伙太懒了，什么也没留下</string>
  <string name="user_info">User Info</string>
  <string name="my_publish">My Publish</string>
  <string name="examination">考试计划</string>
  <string name="my_achievement">我的成绩</string>
  <string name="query_power">查电费</string>
  <string name="class_course">查课表</string>
  <string name="query_power_title">Query Power</string>
  <string name="library">图书馆</string>
  <string name="school_date">校历</string>
  <string name="logout">注销登陆</string>
  <string name="about">关于我们</string>
  <string name="more">更多</string>
  <string name="name">姓名：</string>
  <string name="number">学号：</string>
  <string name="dep">学院：</string>
  <string name="str_class">班级：</string>
  <string name="personal">Personal</string>
  <string name="personal_publish">我的发布</string>
  <string name="complete">完成</string>
  <string name="input_tip">请先输入信息</string>
  <string name="locate_tip">请输入楼栋号</string>
  <string name="room_tip">请输入寝室号</string>
  <string name="west_school">西校区</string>
  <string name="east_school">东校区</string>
  <string name="query_tip">清先填写寝室号</string>
  <string name="surplus_day">剩余%d天</string>
  <string name="surplus_hour">剩余%d小时</string>
  <string name="my_grade">My Grade</string>
  <string name="school_calendar">School Calendar</string>
  <string name="library_url">http://218.75.197.122:8989/opac/weixin/account/service/index</string>
  <string name="library_title">Library</string>
  <string name="about_us">当前版本%s\n仅供学习交流使用</string>
  <string name="logout_tip">注销后需要重新登陆\n是否继续?</string>
  <string name="course_detail">Course Detail</string>
  <string name="load_fail_tip">加载失败,点击重试</string>
  <string name="page">%d/%d</string>
  <string name="copy">复制</string>
  <string name="call">呼叫</string>
  <string name="month">%d月</string>
  <string name="title_input_tip">请输入标题</string>
  <string name="price_input_tip">请输入价格</string>
  <string name="area_input_tip">请输入区域</string>
  <string name="phone_input_tip">请输入联系方式</string>
  <string name="attr_input_tip">请输入成色</string>
  <string name="content_input_tip">请输入详情</string>
  <string name="publish_goods">Publish Goods</string>
  <string name="sell">出售</string>
  <string name="buy">求购</string>
  <string name="input_thing_name">请输入物品名</string>
  <string name="locate_input_tip">请输入地点</string>
  <string name="lost_time">%d-%s-%s %s:00</string>
  <string name="calendar_tip">距离 %s 还有 %d 天</string>
  <string name="calendar_tip_exam">距离 %s考试 还有 %s </string>
  <string name="date_tip">%s\n%d</string>
  <string name="message">Message</string>
  <string name="private_message">私信</string>
  <string name="app_key">e8c7f8ed34bb48dd4c5ab6b54d8cf11d</string>
  <string name="default_content">快来私信我吧～</string>
  <string name="voice_record_tip">%d:%02d</string>
  <string name="voice_length_tip">[语音] %d\'\'</string>
  <string name="day_tip">%d 天</string>
  <string name="hour_tip">%d 小时</string>
  <string name="save_image_name">/mnt/sdcard/Pictures/HELPER_%s</string>
  <string name="register">注册</string>
  <string name="register_url">https://api.huthelper.cn/auth/register</string>
  <string name="select_class">选择班级</string>
  <string name="refresh">刷新</string>
  <string name="related_to_me">与我相关</string>
  <string name="clear">清除</string>
  <string name="search_history">搜索历史</string>

  <string-array name="weeks">
    <item>周一</item>
    <item>周二</item>
    <item>周三</item>
    <item>周四</item>
    <item>周五</item>
    <item>周六</item>
    <item>周日</item>
  </string-array>

  <string-array name="section">
    <item>一\n二\n节</item>
    <item>三\n四\n节</item>
    <item>五\n六\n节</item>
    <item>七\n八\n节</item>
    <item>九\n十\n节</item>
  </string-array>

  <string-array name="depLists">
    <item>交通工程学院</item>
    <item>体育学院</item>
    <item>冶金与材料工程学院</item>
    <item>包装与材料工程学院</item>
    <item>包装设计艺术学院</item>
    <item>商学院</item>
    <item>国际学院</item>
    <item>土木工程学院</item>
    <item>城市与环境学院</item>
    <item>外国语学院</item>
    <item>文学与新闻传播学院</item>
    <item>机械工程学院</item>
    <item>法学院</item>
    <item>理学院</item>
    <item>生命科学与化学学院</item>
    <item>电气与信息工程学院</item>
    <item>经济与贸易学院</item>
    <item>计算机学院</item>
    <item>醴陵陶瓷学院</item>
    <item>音乐学院</item>
  </string-array>

  <integer-array name="course_color">
    <item>@color/colorPrimary</item>
    <item>@color/bg_12</item>
    <item>@color/bg_13</item>
    <item>@color/bg_14</item>
    <item>@color/bg_15</item>
    <item>@color/bg_16</item>
    <item>@color/bg_17</item>
    <item>@color/colorMore</item>
  </integer-array>

</resources>
